test/example/controller/error/500_handler.js
module.exports = {
  get: () => {
    throw Error('ERROR');
  },
};
